--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,12 @@ php:
       - '7.1'
 before_script:
       - composer install -vvv
-      - pecl install swoole
+      - wget https://github.com/swoole/swoole-src/archive/v4.0.0.tar.gz
+      - tar -zxvf v4.0.0.tar.gz
+      - cd v4.0.0.tar.gz
+      - phpize
+      - ./configure
+      - make -j 2
+      - make install
+      - echo "extension=swoole.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
 script: ./vendor/bin/phpunit tests
